docs/benchmark/envoy_gateway.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: bench_http
                codec_type: HTTP1
                common_http_protocol_options:
                  idle_timeout: 65s
                stream_idle_timeout: 0s
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: backend
      type: STATIC
      connect_timeout: 0.250s
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        idle_timeout: 65s
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 200000
            max_pending_requests: 200000
            max_requests: 200000
            max_retries: 0
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9001
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9002
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9003
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9004

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
  access_log_path: /tmp/envoy_admin_access.log
